# Snapix

./: .gitignore  CHANGELOG.md  Cargo.toml  FLATHUB.md  LICENSE  Multi-Screenshot-Collage-Plan.md  PROGRESS.md  README.md  Snapix-Plan.md
.github/workflows/: ci.yml  release-appimage.yml  release-flatpak.yml
crates/snapix-app/: Cargo.toml
crates/snapix-app/src/: main.rs
crates/snapix-capture/: Cargo.toml
crates/snapix-capture/src/: backend.rs  lib.rs  wayland.rs  x11.rs
crates/snapix-core/: Cargo.toml
crates/snapix-core/src/: canvas.rs  entitlements.rs  lib.rs  license.rs
crates/snapix-ui/: Cargo.toml
crates/snapix-ui/src/: app.rs  editor.rs  lib.rs  widgets.rs
crates/snapix-ui/src/editor/: actions.rs  i18n.rs  preferences.rs  presets.rs  state.rs
crates/snapix-ui/src/editor/ui/: helpers.rs  mod.rs  preferences.rs  toolbar.rs  unlock.rs  window.rs
crates/snapix-ui/src/editor/ui/inspector/: background.rs  frame.rs  mod.rs  presets.rs  shadow.rs
crates/snapix-ui/src/editor/ui/inspector/background/: controls.rs  presets.rs
crates/snapix-ui/src/widgets/: mod.rs
crates/snapix-ui/src/widgets/canvas/: click.rs  dialog.rs  drag.rs  mod.rs  reframe.rs
crates/snapix-ui/src/widgets/geometry/: crop.rs  hit.rs  layout.rs  mod.rs  paint.rs
crates/snapix-ui/src/widgets/geometry/paint/: signature.rs
crates/snapix-ui/src/widgets/geometry/paint/signature/: blueprint.rs  cut_paper.rs  ink_wash.rs  liquid_glass.rs  memphis_grid.rs  midnight_panel.rs  mod.rs  neo_brutalism.rs  redacted.rs  style.rs  swiss_poster.rs  terminal_glow.rs  vibrant_mesh.rs  warning_tape.rs
crates/snapix-ui/src/widgets/render/: annotations.rs  canvas.rs  export.rs  mod.rs  reframe.rs
data/: io.github.snapix.Snapix.desktop  io.github.snapix.Snapix.metainfo.xml
docs/: signature-background-roadmap.md
flatpak/: cargo-sources.json  io.github.snapix.Snapix.yml
scripts/: build-flatpak-bundle.sh  generate-flatpak-sources.sh
