[package]
name        = "snapix-capture"
description = "Screenshot backends: X11 and Wayland (XDG portal)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
snapix-core.workspace = true
async-trait.workspace = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
image.workspace       = true

[target.'cfg(unix)'.dependencies]
x11rb = { workspace = true, optional = true }
ashpd = { workspace = true, optional = true }

[features]
default  = ["x11", "wayland"]
x11      = ["dep:x11rb"]
wayland  = ["dep:ashpd"]
